Fixed title in "Collection" on mobile

--- a/src/Components/Collection/Collection.scss
+++ b/src/Components/Collection/Collection.scss
@@ -6,7 +6,7 @@
     align-items: center;
 
     .collection__title {
-        margin-bottom: 4rem;
+        margin-bottom: 2rem;
     }
 }
 
